# TCP-chat

./: CMakeLists.txt  parse_args.cpp  parse_args.h  tcp_chat_cs.cpp
cmake/: FindNcurses.cmake  FindReadline.cmake
common/: common.h
src_client/: client.cpp  client.h
src_server/: server.cpp  server.h
